# portfolio-app

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
example/: example.yml
portfolio-app/: pyproject.toml
portfolio-app/portfolio_app/: about_me.py  app.py  experience.py  pyproject.toml  skills.yml
portfolio_app/: __init__.py  about_me.py  app.py  experience.py  skills.yml
portfolio_app/.streamlit/: config.toml
